[gd_scene load_steps=4 format=3 uid="uid://cafws02qn1h2f"]

[ext_resource type="FontFile" uid="uid://b1w37357tl3er" path="res://assets/fonts/Cantarell-Bold.ttf" id="1_a0rcy"]
[ext_resource type="Script" path="res://ui/components/dashboard/chain_providers_info/chain_provider_info.gd" id="1_mqwgc"]
[ext_resource type="Texture2D" uid="uid://hcq0d87vm0xk" path="res://assets/images/folder-open-symbolic 1.svg" id="2_x056b"]

[node name="ChainProviderInfo" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 0.721569)
script = ExtResource("1_mqwgc")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Center"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Center/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Titlebar" type="VBoxContainer" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="Label" parent="Center/Panel/Margin/VBox/Titlebar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_a0rcy")
theme_override_font_sizes/font_size = 24
text = "Settings"
vertical_alignment = 1

[node name="Border" type="HSeparator" parent="Center/Panel/Margin/VBox/Titlebar"]
layout_mode = 2

[node name="DownloadLink" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/DownloadLink"]
layout_mode = 2
size_flags_vertical = 8
text = "Remote Zip:"
vertical_alignment = 2

[node name="LinkButton" type="LinkButton" parent="Center/Panel/Margin/VBox/DownloadLink"]
layout_mode = 2
size_flags_horizontal = 10

[node name="RemoteHash" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/RemoteHash"]
layout_mode = 2
size_flags_vertical = 8
text = "Remote SHA256:"
vertical_alignment = 1

[node name="Hash" type="Label" parent="Center/Panel/Margin/VBox/RemoteHash"]
layout_mode = 2
size_flags_horizontal = 10
vertical_alignment = 1

[node name="SidechainDirectory" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/SidechainDirectory"]
layout_mode = 2
size_flags_vertical = 8
text = "Directory:"

[node name="Value" type="LineEdit" parent="Center/Panel/Margin/VBox/SidechainDirectory"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "/home/jdavis/.local/share/drivechain_launcher"
placeholder_text = "/home/jdavis/.local/share/drivechain_launcher"
editable = false
expand_to_text_length = true

[node name="Button" type="Button" parent="Center/Panel/Margin/VBox/SidechainDirectory"]
layout_mode = 2
icon = ExtResource("2_x056b")

[node name="LocalHash" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/LocalHash"]
layout_mode = 2
size_flags_vertical = 8
text = "Local SHA256:"
vertical_alignment = 1

[node name="Hash" type="Label" parent="Center/Panel/Margin/VBox/LocalHash"]
layout_mode = 2
size_flags_horizontal = 10
vertical_alignment = 1

[node name="Footer" type="VBoxContainer" parent="Center/Panel/Margin/VBox"]
visible = false
layout_mode = 2
size_flags_vertical = 10

[node name="Border" type="HSeparator" parent="Center/Panel/Margin/VBox/Footer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ResetButton" type="Button" parent="Center/Panel/Margin/VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
text = "Reset
"

[connection signal="gui_input" from="Center" to="." method="_on_center_gui_input"]
[connection signal="pressed" from="Center/Panel/Margin/VBox/SidechainDirectory/Button" to="." method="_on_directory_button_pressed"]
[connection signal="pressed" from="Center/Panel/Margin/VBox/Footer/ResetButton" to="." method="_on_reset_button_pressed"]
